--- a/pages/subpages/mine/promoter-center/index.wxss
+++ b/pages/subpages/mine/promoter-center/index.wxss
@@ -1,88 +1,257 @@
-.container {
-  padding: 24rpx;
+page {
+  background: #fff;
 }
-.level-info-wrap {
-  position: relative;
-  padding: 68rpx 0 24rpx 24rpx;
-  min-height: 220rpx;
-  background: rgba(255, 239, 204, 0.1);
-  border-radius: 24rpx;
-  border: 2px solid #fde4b4;
-  overflow: hidden;
+
+.title {
+  color: #111;
+  font-size: 28rpx;
+  font-weight: 550;
 }
-.level-tag {
-  position: absolute;
+
+.nav-bar-wrap {
+  position: fixed;
   top: 0;
   left: 0;
-  padding: 4rpx 18rpx;
-  color: #fff;
+  width: 100%;
+  z-index: 100;
+}
+.nav-bar-wrap.show-bg {
+  overflow: hidden;
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.nav-bar-wrap.show-bg.level-0, .nav-bar-wrap.show-bg.level-1 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_default.png");
+}
+.nav-bar-wrap.show-bg.level-2 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_level_2.png");
+}
+.nav-bar-wrap.show-bg.level-3 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_level_3.png");
+}
+.nav-bar-wrap.show-bg.level-4 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_level_4.png");
+}
+.nav-bar {
+  padding: 0 8px;
+  height: 44px;
+}
+.nav-bar-title {
+  flex: 1;
+  color: #333;
+  font-size: 16px;
+  font-weight: 550;
+  text-align: center;
+}
+
+.container {
+  position: relative;
+  padding: 24rpx;
+  min-height: 100vh;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.container.level-0, .container.level-1 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_default.png");
+}
+.container.level-2 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_level_2.png");
+}
+.container.level-3 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_level_3.png");
+}
+.container.level-4 {
+  background-image: url("https://static.youbozhenxuan.cn/mp/mine_bg_level_4.png");
+}
+
+.upgradation-wrap {
+  margin-top: 150rpx;
+  margin-bottom: 24rpx;
+  padding: 0 24rpx;
+  height: 200rpx;
+  background-size: calc(100% + 32rpx) calc(100% + 24rpx);
+  background-position: -16rpx -12rpx;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+.progress-desc {
+  margin-top: 76rpx;
+  color: #14191f;
   font-size: 24rpx;
-  border-right: 2px solid #fde4b4;
-  border-bottom: 2px solid #fde4b4;
-  border-bottom-right-radius: 24rpx;
 }
-.bg-1 {
-  background: linear-gradient(90deg, #4ae9d2 0%, #12c8a9 100%);
-}
-.bg-2 {
-  background: linear-gradient(90deg, #71c3fe 0%, #3c9bff 100%);
-}
-.bg-3 {
-  background: linear-gradient(90deg, #d284fb 0%, #9b72f6 100%);
-}
-.bg-4 {
-  background: linear-gradient(90deg, #fc7777 0%, #fe5757 100%);
-}
-.level-medal {
-  position: absolute;
-  right: 24rpx;
-  top: 18rpx;
-  width: 168rpx;
-}
-.current-level {
-  color: #404A5C;
-  font-size: 36rpx;
-  font-weight: bolder;
-}
-.current-level-desc {
-  color: #404A5C;
-  font-size: 24rpx;
-}
-.progress-wrap {
+.progress-bar-wrap {
   display: flex;
   align-items: center;
-  margin-top: 36rpx;
+  margin-top: 6rpx;
+}
+.progress-bar-tips {
+  color: #6a6f75;
+  font-size: 20rpx;
 }
 .progress-bar {
   position: relative;
-  width: 400rpx;
+  margin: 0 10rpx;
+  flex: 1;
   height: 24rpx;
   background: #fff;
   border-radius: 12rpx;
 }
 .progress-bar-inner {
   position: absolute;
-  padding-right: 6rpx;
+  top: 0;
+  left: 0;
   height: 24rpx;
-  color: #fff;
-  font-size: 18rpx;
-  line-height: 24rpx;
-  text-align: right;
+  background: linear-gradient(
+    135deg,
+    #ffa266 0%,
+    #ff3d39 64%,
+    #ff3636 100%
+  );
   border-radius: 12rpx;
 }
-.next-level {
-  margin-left: 18rpx;
-  color: #404A5C;
-  font-size: 28rpx;
-  font-weight: bolder;
-}
-.next-level-desc {
+.upgrade-btn {
   display: flex;
   align-items: center;
-  color: #404A5C;
+  justify-content: center;
+  margin-left: 40rpx;
+  width: 106rpx;
+  height: 48rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: linear-gradient(135deg, #ffa266 0%, #ff3d39 64%, #ff3636 100%);
+  border-radius: 24rpx;
+}
+
+.account-info {
+  margin-top: 24rpx;
+  background: #fff;
+  border-radius: 16rpx;
+}
+.account-amount {
+  padding: 24rpx;
+  padding-bottom: 48rpx;
+}
+.account-amount-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.account-amount-title {
+  color: #111;
+  font-size: 28rpx;
+  font-weight: 550;
+}
+.withdraw-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 116rpx;
+  height: 48rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: linear-gradient( 135deg, #FFA266 0%, #FF3D39 64%, #FF3636 100%);
+  border-radius: 24rpx;
+}
+
+.amount-list {
+  display: flex;
+  margin-top: 24rpx;
+}
+.amount-item {
+  flex: 2;
+  text-align: center;
+}
+.amount-item:last-child {
+  flex: 3;
+}
+.amount {
+  color: #14191F;
+  font-size: 44rpx;
+  font-weight: 550;
+}
+.amount-desc {
+  margin-top: 16rpx;
+  color: #3C3F42;
   font-size: 24rpx;
 }
-.arrow {
+
+.account-daily-data {
+  padding: 24rpx;
+  padding-bottom: 48rpx;
+  border-top: 1px solid #eee;
+}
+.date-menu {
+  display: flex;
+  justify-content: space-between;
+}
+.date {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 116rpx;
+  height: 56rpx;
+  color: #6A6F75;
+  font-size: 28rpx;
+  border-radius: 28rpx;
+  border: 1px solid transparent;
+}
+.date.selected {
+  color: #F5701D;
+  background: #FFF3EC;
+  border: 1px solid #F5701D;
+}
+
+.daily-data-list {
+  display: flex;
+  margin-top: 46rpx;
+}
+.daily-data-item {
+  flex: 3;
+  text-align: center;
+}
+.daily-data-item:first-child {
+  flex: 2;
+}
+.daily-data {
+  color: #000;
+  font-size: 32rpx;
+  font-weight: 550;
+}
+.daily-data-desc {
+  margin-top: 16rpx;
+  color: #6A6F75;
+  font-size: 24rpx;
+}
+
+.customer-data-center {
+  margin-top: 24rpx;
+  padding: 24rpx;
+  border-radius: 16rpx;
+  background: #fff;
+}
+.customer-data-list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 28rpx;
+  padding: 0 20rpx;
+}
+.customer-data-desc {
+  color: #6A6F75;
+  font-size: 24rpx;
+}
+.customer-data {
+  margin-top: 16rpx;
+  color: #000;
+  font-size: 32rpx;
+  font-weight: 550;
+}
+.check-more-btn {
+  color: #999;
+  font-size: 24rpx;
+}
+.more-icon {
+  margin-left: 5rpx;
   width: 24rpx;
   height: 24rpx;
 }
