--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -47,11 +47,11 @@
         <image class="function-icon" src="./images/coupon.png" />
         <view class="function-desc">优惠券</view>
       </navigator>
-      <navigator class="function-item" url="/pages/subpages/mine/balance/index" hover-class="none">
+      <navigator class="function-item" wx:if="{{userInfo.level}}" url="/pages/subpages/mine/balance/index" hover-class="none">
         <image class="function-icon" src="./images/balance.png" />
         <view class="function-desc">我的余额</view>
       </navigator>
-      <view class="function-item" bindtap="navToPromoterCenter">
+      <view class="function-item" wx:if="{{userInfo.level}}" bindtap="navToPromoterCenter">
         <image class="function-icon" src="./images/promoter_center.png" />
         <view class="function-desc">推广中心</view>
       </view>
