--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -1,7 +1,7 @@
 <view class="goods-item {{visible ? 'show' : ''}}" bindtap="navToGoodsDetail">
   <image class="cover" mode="widthFix" src="{{item.cover}}" bindload="onCoverLoaded" lazy-load />
   <view class="content">
-    <view class="title omit">
+    <view class="goods-title omit">
       <text class="goods-tag" wx:if="{{!item.shopInfo}}">自营</text>
       {{item.name}}
     </view>
