--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -20,7 +20,7 @@
   padding: 12rpx;
 }
 
-.title {
+.goods-title {
   color: #333;
   font-size: 26rpx;
   font-weight: bold;
@@ -28,10 +28,11 @@
 .goods-tag {
   display: inline-block;
   margin-bottom: 1rpx;
+  margin-right: 2rpx;
   padding: 0 12rpx;
   height: 33rpx;
   color: #ef3741;
-  font-size: 18rpx;
+  font-size: 20rpx;
   line-height: 33rpx;
   font-weight: 500;
   text-align: center;
