--- a/pages/subpages/mall/catering/components/restaurant-item/index.wxml
+++ b/pages/subpages/mall/catering/components/restaurant-item/index.wxml
@@ -8,7 +8,7 @@
     <image class="cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
     <view class="content">
       <view class="row">
-        <view class="title omit single-line">{{item.name}}</view>
+        <view class="title omit single">{{item.name}}</view>
         <view class="category row">{{item.categoryName}}</view>
       </view>
       <view class="score-wrap">
