--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/more-info/components/project-item/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/more-info/components/project-item/index.wxml
@@ -1,4 +1,4 @@
 <view class="project-item">
   <image class="project-image" src="{{info.image}}" />
-  <view class="project-name omit single-line">{{info.name}}</view>
+  <view class="project-name omit single">{{info.name}}</view>
 </view>
