--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/collapse-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/collapse-item/index.wxml
@@ -1,6 +1,6 @@
 <view class="collapse-item">
   <view class="collapse-trunk row between" bindtap="toggleFold">
-    <view class="collapse-trunk-title omit single-line">{{item.name}}</view>
+    <view class="collapse-trunk-title omit single">{{item.name}}</view>
     <view class="collapse-trunk-content row">
       <block wx:if="{{item.fold}}">
         <text class="base-price">¥{{item.basePrice}}起</text>
