--- a/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/evaluation/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/evaluation/index.wxml
@@ -3,8 +3,8 @@
     <view class="goods-item row" wx:for="{{goodsList}}" wx:key="index">
       <image class="goods-image" src="{{item.cover}}" />
       <view class="goods-info">
-        <view class="goods-name omit single-line">{{item.name}}</view>
-        <view class="goods-sku omit single-line">{{item.selectedSkuName}}</view>
+        <view class="goods-name omit single">{{item.name}}</view>
+        <view class="goods-sku omit single">{{item.selectedSkuName}}</view>
       </view>
     </view>
   </view>
