--- a/pages/subpages/mine/promoter-center/subpages/account/index.wxml
+++ b/pages/subpages/mine/promoter-center/subpages/account/index.wxml
@@ -123,7 +123,7 @@
           <image class="goods-cover" src="{{goods.cover}}" />
           <view class="goods-info">
             <view class="goods-name omit">{{goods.name}}</view>
-            <view class="goods-spec omit single-line">{{goods.selectedSkuName}}</view>
+            <view class="goods-spec omit single">{{goods.selectedSkuName}}</view>
             <view class="goods-commission">返现¥{{goods.commission}}</view>
           </view>
         </view>
