--- a/app.wxss
+++ b/app.wxss
@@ -87,7 +87,7 @@ switch {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-.omit.single-line {
+.omit.single {
   -webkit-line-clamp: 1;
 }
 
