--- a/components/hotel-item/index.wxml
+++ b/components/hotel-item/index.wxml
@@ -4,13 +4,13 @@
     <view class="type-label row">酒店</view>
     <view class="address-info">
       <image class="address-icon" src="/images/address.png" />
-      <text class="address-detail omit single-line">{{ item.address }}</text>
+      <text class="address-detail omit single">{{ item.address }}</text>
     </view>
   </view>
   <view class="hotel-title omit">{{ item.name }}</view>
   <view class="label-list">
     <view 
-      class="label omit single-line" 
+      class="label omit single" 
       wx:for="{{featureTagList}}" 
       wx:key="_index" 
       wx:for-item="_item" 
