--- a/components/live-item/index.wxml
+++ b/components/live-item/index.wxml
@@ -18,7 +18,7 @@
     <view class="title omit">{{item.title}}</view>
     <view class="info row">
       <image class="anchor-avatar avatar-default" src="{{item.anchorInfo.avatar}}" lazy-load mode="aspectFill" />
-      <view class="anchor-name omit single-line">{{item.anchorInfo.nickname}}</view>
+      <view class="anchor-name omit single">{{item.anchorInfo.nickname}}</view>
       <view class="praise-info row" wx:if="{{item.status === 1}}">
         <image class="praise-icon" src="/images/fire.png" />
         <text>{{NUM.over(item.praiseNumber, 100000)}}</text>
