--- a/pages/subpages/home/media/live/components/anchor-capsule/index.wxml
+++ b/pages/subpages/home/media/live/components/anchor-capsule/index.wxml
@@ -3,7 +3,7 @@
 <view class="anchor-capsule row" catchtap="navToAnchorCenter">
   <image class="anchor-avatar avatar-default" src="{{anchorInfo.avatar}}" />
   <view class="anchor-capsule-content">
-    <view class="anchor-name omit single-line">{{anchorInfo.nickname}}</view>
+    <view class="anchor-name omit single">{{anchorInfo.nickname}}</view>
     <view class="audience-count">{{NUM.over(audienceCount, 100000)}}人观看</view>
   </view>
   <button 
