--- a/pages/subpages/mall/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/components/scenic-spot-item/index.wxml
@@ -1,7 +1,7 @@
 <view class="scenic-spot-item" bindtap="checkDetail">
   <image class="scenic-spot-image" mode="aspectFill" src="{{info.cover}}" />
   <view class="scenic-spot-info">
-    <view class="scenic-spot-name omit single-line">{{info.name}}</view>
+    <view class="scenic-spot-name omit single">{{info.name}}</view>
     <view class="scenic-spot-rate-wrap row">
       <van-rate value="{{info.score || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
       <view class="scenic-spot-rate">
