--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -31,7 +31,7 @@
                 <view class="goods-name omit {{_item.status === 3 ? 'invalid' : ''}}">{{_item.name}}</view>
                 <block wx:if="{{_item.status === 1}}">
                   <view class="goods-sku-wrap" wx:if="{{_item.selectedSkuName}}" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">
-                    <text class="goods-sku omit single-line">已选：{{_item.selectedSkuName}}</text>
+                    <text class="goods-sku omit single">已选：{{_item.selectedSkuName}}</text>
                     <image class="sku-edit-icon" src="https://img.ubo.vip/mp/to-icon.png" />
                   </view>
                   <view class="goods-price-wrap">
