--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
@@ -4,7 +4,7 @@
       <image class="shop-logo" src="{{shopInfo.logo}}" />
       <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
     </view>
-    <view class="name omit single-line">{{shopInfo.name}}</view>
+    <view class="name omit single">{{shopInfo.name}}</view>
     <view class="more-btn row" bindtap="navToShop">
       <text>进入店铺</text>
       <image class="more-icon" src="https://img.ubo.vip/mp/selection/goods-detail/to-icon.png" />
@@ -20,7 +20,7 @@
     >
       <image class="goods-image" src="{{item.cover}}" lazy-load />
       <view class="content">
-        <view class="goods-title omit single-line">{{item.name}}</view>
+        <view class="goods-title omit single">{{item.name}}</view>
         <price-unit price="{{item.price || 0}}" />
       </view>
     </view>
