--- a/pages/subpages/mall/goods/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxml
@@ -29,7 +29,7 @@
       <image class="goods-img" src="{{goods.cover}}" mode="aspectFill" lazy-load />
       <view class="goods-content">
         <view class="goods-name omit">{{goods.name}}</view>
-        <view class="goods-sku omit single-line" wx:if="{{goods.selectedSkuName}}">规格：{{goods.selectedSkuName}}</view>
+        <view class="goods-sku omit single" wx:if="{{goods.selectedSkuName}}">规格：{{goods.selectedSkuName}}</view>
         <view class="goods-price-wrap">
           <price-unit price="{{goods.price || 0}}" />
           <view class="count-wrap">
