--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -7,7 +7,7 @@
   <image class="cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
   <view class="content">
     <view class="row">
-      <view class="title omit single-line">{{item.name}}</view>
+      <view class="title omit single">{{item.name}}</view>
       <view class="level-tag row" wx:if="{{item.level}}">{{item.level}}</view>
     </view>
     <view class="labels">
