--- a/pages/subpages/mine/merchant-center/subpages/catering-management/subpages/set-meal-order-detail/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/subpages/set-meal-order-detail/index.wxml
@@ -3,7 +3,7 @@
 
 <view class="container">
   <view class="card">
-    <view class="restaurant-name omit single-line">{{orderInfo.restaurantName}}</view>
+    <view class="restaurant-name omit single">{{orderInfo.restaurantName}}</view>
     <set-meal-item info="{{orderInfo.setMealInfo}}" bind:checkDetail="navToSetMealDetail" />
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
