--- a/pages/subpages/mine/merchant-center/subpages/scenic-management/subpages/order-detail/components/goods-list/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-management/subpages/order-detail/components/goods-list/index.wxml
@@ -4,7 +4,7 @@
       <image class="goods-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
       <view class="goods-content">
         <view class="goods-name omit">{{item.name}}</view>
-        <view class="goods-sku omit single-line" wx:if="{{item.selectedSkuName}}">规格：{{item.selectedSkuName}}</view>
+        <view class="goods-sku omit single" wx:if="{{item.selectedSkuName}}">规格：{{item.selectedSkuName}}</view>
         <view class="goods-price-wrap">
           <price-unit price="{{item.price || 0}}" color="#333" />
           <view class="count-wrap">
