--- a/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/order-detail/index.wxml
@@ -5,10 +5,10 @@
     <view class="card-header row">
       <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
         <image class="shop-logo" wx:if="{{orderInfo.shopLogo}}" src="{{orderInfo.shopLogo}}" />
-        <view class="shop-name omit single-line">{{orderInfo.shopName}}</view>
+        <view class="shop-name omit single">{{orderInfo.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
-      <view class="shop-name omit single-line" wx:if="{{!orderInfo.shopId}}">官方自营</view>
+      <view class="shop-name omit single" wx:if="{{!orderInfo.shopId}}">官方自营</view>
     </view>
     <goods-list list="{{orderInfo.goodsList}}" status="{{orderInfo.status}}" />
     <view class="list row between">
