--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
@@ -5,10 +5,10 @@
     <view class="list-header row between">
       <view class="shop-info row" wx:if="{{item.shopId}}" catchtap="navToShop" data-id="{{item.shopId}}">
         <image class="shop-logo" wx:if="{{item.shopLogo}}" src="{{item.shopLogo}}" />
-        <view class="shop-name omit single-line">{{item.shopName}}</view>
+        <view class="shop-name omit single">{{item.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
-      <view class="shop-name omit single-line" wx:if="{{!item.shopId}}">官方自营</view>
+      <view class="shop-name omit single" wx:if="{{!item.shopId}}">官方自营</view>
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
