--- a/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/components/order-list/index.wxml
@@ -4,7 +4,7 @@
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
     <view class="list-header row between">
       <view class="restaurant-info row" catchtap="navToRestaurant" data-id="{{item.restaurantId}}">
-        <view class="restaurant-name omit single-line">{{item.restaurantName}}</view>
+        <view class="restaurant-name omit single">{{item.restaurantName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
