--- a/pages/tab-bar-pages/home/components/note-item/index.wxml
+++ b/pages/tab-bar-pages/home/components/note-item/index.wxml
@@ -11,7 +11,7 @@
         <view class="address row" wx:if="{{item.address}}">
           <text class="split-spot">·</text>
           <image class="address-icon" src="/images/media-item/address.png" />
-          <text class="address-detail omit single-line">{{item.address}}</text>
+          <text class="address-detail omit single">{{item.address}}</text>
         </view>
       </view>
     </view>
